--- a/static/scss/helpers/_icons_buttons.scss
+++ b/static/scss/helpers/_icons_buttons.scss
@@ -170,3 +170,8 @@ i {
     background-color: #5eacbea6;
     color: #fff;
 }
+
+.timeline .cta-btn.dark-btn {
+    height: 35px;
+    font-size: 0.8rem;
+}
