--- a/static/scss/pages/_index.scss
+++ b/static/scss/pages/_index.scss
@@ -183,11 +183,11 @@ html {
 // work history
 
 #work-history {
-    background-color: #000; 
+    background-color: #000;
     color: #fff;
 }
 
-// timeline 
+// timeline code credit: https://codepen.io/alanhouser/pen/aErrQJ
 #timeline-content {
     margin-top: 50px;
     text-align: center;
@@ -196,24 +196,67 @@ html {
 .timeline {
     border-left: 4px solid $color1;
     border-bottom-right-radius: 4px;
-    border-top-right-radius: 4px;    
+    border-top-right-radius: 4px;
     background: fade(#fff, 3%);
     color: fade(fff, 80%);
-    font-family: $main-text;  
-    margin: 50px auto;  
-    letter-spacing: 0.5px;   
+    font-family: $main-text;
+    margin: 50px auto;
+    letter-spacing: 0.5px;
     position: relative;
     line-height: 1.4em;
-    font-size: 1.03em;   
-    padding: 50px;   
+    font-size: 1.03em;
+    padding: 50px;
     list-style: none;
-    text-align: left;  
-    font-weight: 100;  
-    max-width: 30%; 
+    text-align: left;
+    font-weight: 100;
+    max-width: 100%;
+    padding-right: 0;
 }
 
 .timeline h3 {
     font-family: $heading;
     font-weight: 400;
     font-size: 1.4em;
+}
+
+.timeline .event {
+    border-bottom: 1px dashed rgba(255, 255, 255, 0.1);
+    padding-bottom: 25px;
+    margin-bottom: 50px;
+    position: relative;
+}
+
+.timeline .event:last-of-type {
+    padding-bottom: 0;
+    margin-bottom: 0;
+    border: none;
+}
+
+.timeline .event:before,
+.timeline .event:after {
+    position: absolute;
+    display: block;
+    top: 0;
+}
+
+.timeline .event:before {
+    left: -160px;
+    color: rgba(255, 255, 255, 0.4);
+    content: attr(data-date);
+    text-align: right;
+    font-weight: 100;
+    font-size: 0.8em;
+    min-width: 90px;
+}
+
+.timeline .event:after {
+    -webkit-box-shadow: 0 0 0 4px $color1;
+    box-shadow: 0 0 0 4px $color1;
+    left: -57.85px;
+    background: #000;
+    border-radius: 50%;
+    height: 11px;
+    width: 11px;
+    content: "";
+    top: 5px;
 }
